--- a/COD_Randomizer_App.Android/Properties/AndroidManifest.xml
+++ b/COD_Randomizer_App.Android/Properties/AndroidManifest.xml
@@ -1,12 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="Warzone_Class_Randomizer.Warzone_Class_Randomizer" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="ch.thise.wz_rcg" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:label="Warzone Class Randomizer" 
-               android:theme="@style/MainTheme"     
-               android:icon="@mipmap/ic_launcher"
-               android:roundIcon="@mipmap/ic_launcher_round">
-
-  </application>
+	<application android:label="Warzone Random Class Generator" android:theme="@style/MainTheme" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
