--- a/COD_Randomizer_App/COD_Randomizer_App.csproj
+++ b/COD_Randomizer_App/COD_Randomizer_App.csproj
@@ -11,9 +11,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\TestFile.txt" />
+    <EmbeddedResource Include="Resources\TestJson.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
-    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0-pre1" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0-pre2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
+    <Folder Include="Resources\Json\" />
   </ItemGroup>
 </Project>
