MW Pistols done Fixed mk2/edr

--- a/COD_RandomizerApp.JsonGenerator/COD_Randomizer_App.JsonGenerator.csproj
+++ b/COD_RandomizerApp.JsonGenerator/COD_Randomizer_App.JsonGenerator.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Resources\Perks.cs" />
     <Compile Include="Resources\RearGrips.cs" />
     <Compile Include="Resources\Stocks.cs" />
+    <Compile Include="Resources\TriggerAction.cs" />
     <Compile Include="Resources\Underbarrel.cs" />
     <Compile Include="Resources\WeaponDictionaries.cs" />
     <Compile Include="Program.cs" />
