--- a/COD_Randomizer_App/COD_Randomizer_App.csproj
+++ b/COD_Randomizer_App/COD_Randomizer_App.csproj
@@ -45,5 +45,8 @@
     <EmbeddedResource Update="Views\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\TestPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
